# ads1115_hal

./: CMakeLists.txt  README.md
examples/: main.c
include/: ads1115_hal.h  ads_defs.h
src/: ads1115_hal.c
